--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -17,12 +17,19 @@
         location.replace(`https:${location.href.substring(location.protocol.length)}`);}
   </script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/2.0.0/clipboard.min.js"></script>
+ 
+  <!-- OUR CODE -->
+   <style type="text/css">
+        #map {
+           width: 600px;
+           height: 400px;
+        }
+   </style>
+   
   <script>
      window.onload = function() {
         var clipboard = new ClipboardJS('.btn');}
   </script>
-  
-  <!-- OUR CODE -->
   <script type="text/javascript" src="/js/client.js"></script>
 </head>
 
@@ -53,16 +60,6 @@
      <!-- Show all Players and Waypoints, target and current distance from each. Highlight a waypoint if "occupied"       -->
      <pre><span id="displayinfo" width: device-width></span></pre>
      
-     <style type="text/css"> 
-     #map_canvas{
-         overflow: hidden;
-         position: absolute;
-         top: 0;
-         right: 0;
-         bottom: 0;
-         left: 0;
-     }
-     </style> 
      <div id="mapid"></div>       <!-- Display map -->
      <script type="text/javascript" src="/js/showmap.js"></script>
   </div>
