--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -20,10 +20,14 @@
  
   <!-- OUR CODE -->
    <style type="text/css">
-        #map {
-           width: 600px;
+      #map-container {
+           width: device-width;
            height: 400px;
-        }
+      }
+      #map {
+           width: 100%;
+           height: 100%;
+      }
    </style>
    
   <script>
