--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -22,10 +22,10 @@
    <style type="text/css">
       #map-container {
            width: device-width;
-           height: 400px;
+           height: 800px;
       }
       #map {
-           width: 100%;
+           width: 100vw;
            height: 100%;
       }
    </style>
