--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -59,7 +59,7 @@
      <!-- Show all Players and Waypoints, target and current distance from each. Highlight a waypoint if "occupied"       -->
      <pre><span id="displayinfo" width: device-width></span></pre>
      
-     <div id="mapid"></div>       <!-- Display map -->
+     <div id="mapid" width: device-width; height: 1000px></div>       <!-- Display map -->
      <script type="text/javascript" src="/js/showmap.js"></script>
   </div>
   
