--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -19,16 +19,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/2.0.0/clipboard.min.js"></script>
  
   <!-- OUR CODE -->
-   <style type="text/css">
-      #map {
-           height: 1000px;
-      }
-   </style>
-   
-  <script>
-     window.onload = function() {
-        var clipboard = new ClipboardJS('.btn');}
-  </script>
+  <script> window.onload = function() {var clipboard = new ClipboardJS('.btn');}</script>
   <script type="text/javascript" src="/js/client.js"></script>
 </head>
 
@@ -59,7 +50,7 @@
      <!-- Show all Players and Waypoints, target and current distance from each. Highlight a waypoint if "occupied"       -->
      <pre><span id="displayinfo" width: device-width></span></pre>
      
-     <div id="mapid" width: device-width; height: 1000px></div>       <!-- Display map -->
+     <div id="mapid"></div>       <!-- Display map -->
      <script type="text/javascript" src="/js/showmap.js"></script>
   </div>
   
