--- a/views/pages/reward.ejs
+++ b/views/pages/reward.ejs
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html> <!-- REWARD.ejs -->
 <html>
 <head width: device-width>
   <%- include ("../partials/header.ejs") %>
