--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -3,23 +3,25 @@
 <head width: device-width>
   <%- include ("../partials/header.ejs") %>
  
-  <!-- Leaflet stylesheet and source code are added here -->
+  <!-- Leaflet + EasyButton stylesheets and source code are added here -->
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
      integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
      crossorigin=""/>
   <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
      integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
      crossorigin="">
-  </script>
+  </script>     
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/leaflet-easybutton@2/src/easy-button.css">
+  <script src="https://cdn.jsdelivr.net/npm/leaflet-easybutton@2/src/easy-button.js"></script>
   
   <script> <!-- must be https for most web browsers to access current location -->
      if (location.protocol !== 'https:') {
         location.replace(`https:${location.href.substring(location.protocol.length)}`);}
   </script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/2.0.0/clipboard.min.js"></script>
+  <script> window.onload = function() {var clipboard = new ClipboardJS('.btn');}</script>
  
   <!-- OUR CODE -->
-  <script> window.onload = function() {var clipboard = new ClipboardJS('.btn');}</script>
   <script type="text/javascript" src="/js/client.js"></script>
 </head>
 
