--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -13,6 +13,7 @@
   </script>     
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/leaflet-easybutton@2/src/easy-button.css">
   <script src="https://cdn.jsdelivr.net/npm/leaflet-easybutton@2/src/easy-button.js"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   
   <script> <!-- must be https for most web browsers to access current location -->
      if (location.protocol !== 'https:') {
