--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -48,11 +48,11 @@
      </h1>
      <p><span id="gamedesc" class="badge badge-info"></span></p>
      <p>This game currently has <span id="current-game-player-count" class="badge badge-info"></span> active players</p>
-     <button type="quit" class="btn btn-primary" href="#" role="button">Quit Game</button>
      <p>You are located at: <span id="current-Lat" class="badge badge-info"></span> <span id="current-Lon" class="badge badge-info"></span> (+/-<span id="current-Acc" class="badge-light"></span>m)</p>
 
      <!-- Show all Players and Waypoints, target and current distance from each. Highlight a waypoint if "occupied"       -->
      <pre><span id="displayinfo" width: device-width></span></pre>
+     <button type="quit" class="btn btn-danger btn-sm" href="#" role="button">Quit Game</button>
      
      <div id="mapid"></div>       <!-- Display map -->
      <script type="text/javascript" src="/js/showmap.js"></script>
