--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -52,7 +52,9 @@
 
      <!-- Show all Players and Waypoints, target and current distance from each. Highlight a waypoint if "occupied"       -->
      <pre><span id="displayinfo" width: device-width></span></pre>
-     <button type="quit" class="btn btn-danger btn-sm" href="#" role="button">Quit Game</button>
+     <form id="quit-game-form">
+        <button type="quit" class="btn btn-danger btn-sm" href="#" role="button">Quit Game</button>
+     </form>
      
      <div id="mapid"></div>       <!-- Display map -->
      <script type="text/javascript" src="/js/showmap.js"></script>
