--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -52,9 +52,10 @@
 
      <!-- Show all Players and Waypoints, target and current distance from each. Highlight a waypoint if "occupied"       -->
      <pre><span id="displayinfo" width: device-width></span></pre>
-     <form id="quit-game-form">
-        <button type="quit" class="btn btn-danger btn-sm" href="#" role="button">Quit Game</button>
-     </form>
+      <!-- <form id="quit-game-form">
+        <button type="quit" class="btn btn-danger btn-sm" href="htps://www.geocaching.com" role="button">Quit Game</button>
+     </form> -->
+     <a href="https://www.geocaching.com/">  <button type="quit" class="btn btn-danger btn-sm" value="Quit Game" /> </a>
      
      <div id="mapid"></div>       <!-- Display map -->
      <script type="text/javascript" src="/js/showmap.js"></script>
