--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -55,7 +55,9 @@
       <!-- <form id="quit-game-form">
         <button type="quit" class="btn btn-danger btn-sm" href="htps://www.geocaching.com" role="button">Quit Game</button>
      </form> -->
-     <a href="https://www.geocaching.com/">  <button type="quit" class="btn btn-danger btn-sm" value="Quit Game" /> </a>
+     <form action="https??www.geocaching.com" method="get">
+         <input type="submit" class="btn btn-danger btn-sm" value="Quit Game" name="Quit" id="frm_quit" /> 
+     </form>
      
      <div id="mapid"></div>       <!-- Display map -->
      <script type="text/javascript" src="/js/showmap.js"></script>
