--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -55,7 +55,7 @@
       <!-- <form id="quit-game-form">
         <button type="quit" class="btn btn-danger btn-sm" href="htps://www.geocaching.com" role="button">Quit Game</button>
      </form> -->
-     <form action="https??www.geocaching.com" method="get">
+     <form action="https://www.geocaching.com" method="get">
          <input type="submit" class="btn btn-danger btn-sm" value="Quit Game" name="Quit" id="frm_quit" /> 
      </form>
      
