--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -59,7 +59,7 @@
   <div class="alert alert-info text-center" role="alert" width: device-width>
      <i>Developed by Pprime` with a hell of a lot of effort.  Hosted by Heroku. (c) 2021 All rights reserved.</i>
      <form action="https://www.geocaching.com" method="get">
-         <input type="submit" class="btn btn-danger btn-sm" value="Quit Game" name="Quit" id="frm_quit" /> 
+         <input type="submit" class="btn btn-danger btn-sm" value="Quit Game" name="Quit" id="frm_quit" style="float: right;"/> 
      </form>
   </div>
 </body>
