--- a/views/pages/reward.ejs
+++ b/views/pages/reward.ejs
@@ -9,6 +9,7 @@
   } </script>
   <script>
      window.onload = function() {
+        navigator.geolocation.clearWatch(); //stop phone's GPS Locator service
         var clipboard = new ClipboardJS('.btn');
         var reward_information = localStorage.getItem('reward_information');
         $("#rewardinfo").text(reward_information);
@@ -22,7 +23,7 @@
         $("#current-Lat").text(mylat);   
         var mylon = localStorage.getItem('my_lon');
         $("#current-Lon").text(mylon);   
-        localStorage.clear();
+        localStorage.clear(); //Is there an issue removing this command?
       };
   </script>
 </head>
