--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -28,7 +28,8 @@
 
 <body width: device-width>
   <div class="alert alert-info text-center" role="alert" width: device-width>
-     <H1> Welcome to the Anti-Social Cache Hub </H1>
+     <!-- <H1> Welcome to the Anti-Social Cache Hub </H1> -->
+     <H1> The Anti-Social Geocache </H1>
   </div>
 
   <div id="lj-startup" style="display: none" width: device-width>
