--- a/views/pages/reward.ejs
+++ b/views/pages/reward.ejs
@@ -40,7 +40,7 @@
     <pre><small><span id="displayinfo"></span></small></pre>
   </div>
   
-  <div class="alert alert-success text-center" role="alert">
+  <div class="alert alert-success text-center" role="alert" width: device-width>
     <!-- Show the Reward information -->
     <pre><H1><strong><span id="rewardinfo"></span></strong></H1></pre>
     <span><button type="button" class="btn btn-secondary btn-sm btn-clipboard" data-clipboard-target="#rewardinfo">Copy</button></span>
