--- a/views/pages/reward.ejs
+++ b/views/pages/reward.ejs
@@ -42,7 +42,7 @@
   
   <div class="alert alert-success text-center" role="alert" width: device-width>
     <!-- Show the Reward information -->
-    <pre><H1><strong><span id="rewardinfo"></span></strong></H1></pre>
+    <pre><H2><strong><span id="rewardinfo" width: device-width></span></strong></H2></pre>
     <span><button type="button" class="btn btn-secondary btn-sm btn-clipboard" data-clipboard-target="#rewardinfo">Copy</button></span>
   </div>
  
