--- a/views/pages/reward.ejs
+++ b/views/pages/reward.ejs
@@ -18,7 +18,7 @@
         var game_description = localStorage.getItem('game_description');
         $("#gamedesc").text(game_description);
         var current_game = localStorage.getItem('current_game');
-        $("#current-game-id").text(current_game);   
+        $("#gameId").text(current_game);   
         var mylat = localStorage.getItem('my_lat');
         $("#current-Lat").text(mylat);   
         var mylon = localStorage.getItem('my_lon');
@@ -32,8 +32,8 @@
   <div class="alert alert-success text-center" role="alert" width: device-width> <H1> Congratulations! </H1> </div>
   <div id="lj-reward" width: device-width>
     <!-- Show Game information -->
-    <h1>Game Code: <span id="current-game-id" class="badge badge-secondary"></span>
-    <span><button type="button" class="btn btn-secondary btn-sm btn-clipboard" data-clipboard-target="#current-game-id">Copy Code</button></span>
+    <h1>Game Code: <span id="gameId" class="badge badge-secondary"></span>
+    <span><button type="button" class="btn btn-secondary btn-sm btn-clipboard" data-clipboard-target="#gameId">Copy Code</button></span>
     </h1>
     <p><span id="gamedesc" class="badge badge-info"></span></p>
     <p>You are located at: <span id="current-Lat" class="badge badge-info"></span>, <span id="current-Lon" class="badge badge-info"></span></p>
@@ -47,7 +47,7 @@
   </div>
  
   <div class="alert alert-info text-center" role="alert" width: device-width>
-    <i>Developed by Pprime` with a hell of a lot of effort.  Hosted by Heroku. (c) 2021 All rights reserved.</i>
+    <i>Developed by Pprime` with a hell of a lot of effort.  Hosted by Heroku. (c) 2022 All rights reserved.</i>
   </div>
 </body>
 </html>
