--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -43,7 +43,7 @@
   </div>
 
   <div id="lj-in-game" style="display: none" width: device-width>
-     <h1>Game Code: <span id="current-game-id" class="badge badge-secondary"></span>
+     <h1>Game Code: <span id="gameId" class="badge badge-secondary"></span>
          <span><button type="button" class="btn btn-secondary btn-sm btn-clipboard" data-clipboard-target="#gameId">Copy Code</button></span>
      </h1>
      <p><span id="gamedesc" class="badge badge-info"></span></p>
@@ -57,7 +57,7 @@
   </div>
   
   <div class="alert alert-info text-center" role="alert" width: device-width>
-     <i>Developed by Pprime` with a hell of a lot of effort.  Hosted by Heroku. (c) 2021 All rights reserved.</i>
+     <i>Developed by Pprime` with a hell of a lot of effort.  Hosted by Heroku. (c) 2022 All rights reserved.</i>
      <form action="https://www.geocaching.com" method="get">
          <input type="submit" class="btn btn-danger btn-sm" value="Quit Game" name="Quit" id="frm_quit" style="float: right;"/> 
      </form>
