--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -43,8 +43,8 @@
   </div>
 
   <div id="lj-in-game" style="display: none" width: device-width>
-     <h1>Game Code: <span id="gameId" class="badge badge-secondary"></span>
-         <span><button type="button" class="btn btn-secondary btn-sm btn-clipboard" data-clipboard-target="#gameId">Copy Code</button></span>
+     <h1>Game Code: <span id="current-gameId" class="badge badge-secondary"></span>
+         <span><button type="button" class="btn btn-secondary btn-sm btn-clipboard" data-clipboard-target="#current-gameId">Copy Code</button></span>
      </h1>
      <p><span id="gamedesc" class="badge badge-info"></span></p>
      <p>This game currently has <span id="current-game-player-count" class="badge badge-info"></span> active players</p>
