--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -29,7 +29,7 @@
 <body width: device-width>
   <div class="alert alert-info text-center" role="alert" width: device-width>
      <H1> Welcome to the Anti-Social Mob Hub </H1>
-     <form action="https://enblesp1msgzhmk140wukq-on.drv.tw/asmhub/asmhubGuide.html" method="get">
+     <form target="_blank" action="https://enblesp1msgzhmk140wukq-on.drv.tw/asmhub/asmhubGuide.html" method="get">
          <input type="submit" class="btn btn-info btn-sm" value="Help!" name="Help" id="frm_help" style="float: right;"/> 
      </form>
   </div>
